[project]
name = "test-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar>=2.16.0",
    "lxml>=6.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "selenium>=4.34.2",
]
